Used font-display CSS to ensure text is user-visible while webfont is loading

--- a/src/Containers/App.css
+++ b/src/Containers/App.css
@@ -1,8 +1,9 @@
 @font-face {
-font-family: 'SEGA LOGO FONT';
-font-style: normal;
-font-weight: normal;
-src: local('SEGA LOGO FONT'), url('SEGA.woff') format('woff');
+	font-display: swap;
+	font-family: 'SEGA LOGO FONT';
+	font-style: normal;
+	font-weight: normal;
+	src: local('SEGA LOGO FONT'), url('SEGA.woff') format('woff');
 }
 
 h1 {
